# netbox-example-plugin

./: README.md  pyproject.toml  tasks.py
development/: base_configuration.py  docker-compose.yml
export/: netbox_export_templates.csv
netbox_example_plugin/: __init__.py  admin.py  choices.py  filters.py  forms.py  models.py  navigation.py  tables.py  urls.py  validators.py  views.py
netbox_example_plugin/api/: serializers.py  urls.py  views.py
netbox_example_plugin/migrations/: 0001_initial.py  0002_auto_20220311_1452.py  0003_alter_animal_name.py  0004_alter_animal_name.py
netbox_example_plugin/templates/netbox_example_plugin/: add_animal.html  animal.html  animal_list.html  obj_table.html
